Fixed bug with all pics not showing up in image carousel.

--- a/root/frontend/src/components/Home/home.module.css
+++ b/root/frontend/src/components/Home/home.module.css
@@ -20,8 +20,6 @@
 }
 
 .ProfilePic {
-    width: 300px;
-    height: 200px;
 }
 
 .Greeting {
